--- a/Flix/Base.lproj/Main.storyboard
+++ b/Flix/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DPj-Vo-PRO">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -16,37 +16,54 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="185" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Z4K-mO-z00">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Z4K-mO-z00">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieCell" rowHeight="185" id="5kq-rf-H2v" customClass="MovieCell" customModule="Flix" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="185"/>
+                                        <rect key="frame" x="0.0" y="44.666666030883789" width="414" height="185"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5kq-rf-H2v" id="DFL-mL-G01">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="185"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="54T-Fz-Zbw">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="54T-Fz-Zbw">
                                                     <rect key="frame" x="20" y="11" width="113" height="163"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="113" id="AtF-gx-ftp"/>
+                                                        <constraint firstAttribute="height" constant="163" id="wsf-Rp-Z6K"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Hc-BB-Oel">
-                                                    <rect key="frame" x="141" y="40" width="253" height="134"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yq9-ZQ-pyg">
-                                                    <rect key="frame" x="141" y="11" width="253" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yq9-ZQ-pyg">
+                                                    <rect key="frame" x="141" y="11" width="253" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="253" id="fF9-7n-3bs"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Synopsis" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Hc-BB-Oel">
+                                                    <rect key="frame" x="141" y="35" width="253" height="20.333333333333329"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="253" id="dr3-lA-pPF"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="54T-Fz-Zbw" firstAttribute="bottom" secondItem="DFL-mL-G01" secondAttribute="bottomMargin" id="00U-H3-x4g"/>
+                                                <constraint firstItem="8Hc-BB-Oel" firstAttribute="top" secondItem="Yq9-ZQ-pyg" secondAttribute="bottom" id="6yK-4v-m4O"/>
+                                                <constraint firstItem="54T-Fz-Zbw" firstAttribute="leading" secondItem="DFL-mL-G01" secondAttribute="leadingMargin" id="7Ej-84-fpf"/>
+                                                <constraint firstItem="8Hc-BB-Oel" firstAttribute="leading" secondItem="54T-Fz-Zbw" secondAttribute="trailing" constant="8" symbolic="YES" id="8EO-mS-eVX"/>
+                                                <constraint firstItem="Yq9-ZQ-pyg" firstAttribute="leading" secondItem="54T-Fz-Zbw" secondAttribute="trailing" constant="8" symbolic="YES" id="L6Z-nD-b1Y"/>
+                                                <constraint firstItem="54T-Fz-Zbw" firstAttribute="top" secondItem="DFL-mL-G01" secondAttribute="topMargin" id="P7T-jw-CkJ"/>
+                                                <constraint firstItem="8Hc-BB-Oel" firstAttribute="trailing" secondItem="DFL-mL-G01" secondAttribute="trailingMargin" id="Pd4-il-aLF"/>
+                                                <constraint firstItem="Yq9-ZQ-pyg" firstAttribute="trailing" secondItem="DFL-mL-G01" secondAttribute="trailingMargin" id="lTN-VL-0La"/>
+                                                <constraint firstItem="Yq9-ZQ-pyg" firstAttribute="top" secondItem="DFL-mL-G01" secondAttribute="topMargin" id="mFt-XN-tal"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="posterView" destination="54T-Fz-Zbw" id="tSX-zc-RWw"/>
@@ -59,6 +76,12 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Z4K-mO-z00" secondAttribute="trailing" id="LlD-nx-INw"/>
+                            <constraint firstItem="Z4K-mO-z00" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Twc-rn-A8k"/>
+                            <constraint firstAttribute="bottom" secondItem="Z4K-mO-z00" secondAttribute="bottom" id="Y0K-WW-jx4"/>
+                            <constraint firstItem="Z4K-mO-z00" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="aQU-A4-zgL"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Movies" id="Akb-Ra-nPo"/>
                     <connections>
