--- a/Flix/Base.lproj/Main.storyboard
+++ b/Flix/Base.lproj/Main.storyboard
@@ -229,6 +229,7 @@
                                         <size key="customSize" width="204" height="252"/>
                                         <connections>
                                             <outlet property="posterView" destination="8dA-RW-zsr" id="fAP-5h-LiE"/>
+                                            <segue destination="AoH-4x-iTg" kind="show" id="FMD-LY-3Qp"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -245,6 +246,89 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lul-Z5-Po4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="882.60869565217399" y="-565.17857142857144"/>
+        </scene>
+        <!--Movie Details View Controller2-->
+        <scene sceneID="Bv2-4g-Cma">
+            <objects>
+                <viewController id="AoH-4x-iTg" customClass="MovieDetailsViewController2" customModule="Flix" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kxo-pU-ONg">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fBL-Jk-jxD">
+                                <rect key="frame" x="0.0" y="17" width="414" height="371"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="414" id="BAg-S6-BvD"/>
+                                    <constraint firstAttribute="height" constant="371" id="t7j-Sd-CSr"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BbQ-A0-41L">
+                                <rect key="frame" x="20" y="244" width="113" height="163"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="113" id="Ive-xn-CX6"/>
+                                    <constraint firstAttribute="height" constant="163" id="fPl-qL-uGR"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Synopsis" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jV5-sA-fXk">
+                                <rect key="frame" x="20" y="415" width="374" height="20.333333333333314"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="374" id="Tnl-mb-kwi"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Release Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cpl-uv-LUA">
+                                <rect key="frame" x="141" y="356.33333333333331" width="253" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="KZB-3X-aEh"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="253" id="h5r-rb-JiW"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="IA5-2c-3Ba">
+                                <rect key="frame" x="141" y="320" width="253" height="26.333333333333314"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="253" id="Lco-tR-m8u"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="EaA-oY-sk4"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="IA5-2c-3Ba" firstAttribute="leading" secondItem="BbQ-A0-41L" secondAttribute="trailing" constant="8" symbolic="YES" id="0XG-us-qKH"/>
+                            <constraint firstItem="fBL-Jk-jxD" firstAttribute="top" secondItem="kxo-pU-ONg" secondAttribute="top" constant="17" id="297-Vx-J7f"/>
+                            <constraint firstItem="BbQ-A0-41L" firstAttribute="top" secondItem="EaA-oY-sk4" secondAttribute="top" constant="156" id="4L4-9V-4Kd"/>
+                            <constraint firstItem="jV5-sA-fXk" firstAttribute="leading" secondItem="EaA-oY-sk4" secondAttribute="leading" constant="20" id="7IG-ab-0eL"/>
+                            <constraint firstItem="fBL-Jk-jxD" firstAttribute="leading" secondItem="EaA-oY-sk4" secondAttribute="leading" id="EBx-NW-3PQ"/>
+                            <constraint firstItem="Cpl-uv-LUA" firstAttribute="leading" secondItem="BbQ-A0-41L" secondAttribute="trailing" constant="8" symbolic="YES" id="HeR-ga-JkS"/>
+                            <constraint firstItem="IA5-2c-3Ba" firstAttribute="top" secondItem="EaA-oY-sk4" secondAttribute="top" constant="232" id="Inw-qx-ynV"/>
+                            <constraint firstItem="EaA-oY-sk4" firstAttribute="trailing" secondItem="jV5-sA-fXk" secondAttribute="trailing" constant="20" id="KEP-S8-cQv"/>
+                            <constraint firstItem="Cpl-uv-LUA" firstAttribute="top" secondItem="IA5-2c-3Ba" secondAttribute="bottom" constant="10" id="OfB-Ne-q1V"/>
+                            <constraint firstItem="EaA-oY-sk4" firstAttribute="trailing" secondItem="Cpl-uv-LUA" secondAttribute="trailing" constant="20" id="U43-gN-CKg"/>
+                            <constraint firstItem="BbQ-A0-41L" firstAttribute="leading" secondItem="EaA-oY-sk4" secondAttribute="leading" constant="20" id="XXi-aw-lVc"/>
+                            <constraint firstItem="EaA-oY-sk4" firstAttribute="trailing" secondItem="IA5-2c-3Ba" secondAttribute="trailing" constant="20" id="ZZl-td-ywg"/>
+                            <constraint firstItem="fBL-Jk-jxD" firstAttribute="trailing" secondItem="EaA-oY-sk4" secondAttribute="trailing" id="oY6-lm-VSB"/>
+                            <constraint firstItem="jV5-sA-fXk" firstAttribute="top" secondItem="BbQ-A0-41L" secondAttribute="bottom" constant="8" symbolic="YES" id="zge-TJ-vfv"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="h2Z-yU-7bL"/>
+                    <connections>
+                        <outlet property="backdropView" destination="fBL-Jk-jxD" id="yNC-DQ-9SB"/>
+                        <outlet property="dateLabel" destination="Cpl-uv-LUA" id="K4p-J9-XGs"/>
+                        <outlet property="posterView" destination="BbQ-A0-41L" id="kEg-9C-n1b"/>
+                        <outlet property="synopsisLabel" destination="jV5-sA-fXk" id="3Uh-ST-lKk"/>
+                        <outlet property="titleLabel" destination="IA5-2c-3Ba" id="GXR-4N-FMS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hHG-3Q-1I4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1616" y="-565"/>
         </scene>
         <!--Now Playing-->
         <scene sceneID="zaD-M0-cVc">
